objects/GAS_Alignment_History_vts__c.object
<CustomObject>
    <description>History of all Global Account Search changes to an Account&apos;s territory alignment</description>
    <fields>
        <fullName>Account_Territory_Loader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the ATL record that GAS has modified</description>
        <label>Account Territory Loader</label>
        <referenceTo>Account_Territory_Loader_vod__c</referenceTo>
        <relationshipLabel>GAS Alignment Histories</relationshipLabel>
        <relationshipName>GAS_Alignment_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Account that has territory alignment changed</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>GAS Alignment Histories</relationshipLabel>
        <relationshipName>GAS_Alignment_Histories</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Territory__c</fullName>
        <description>New territories added to ATL</description>
        <label>New Territory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Territory__c</fullName>
        <description>Old territories from ATL</description>
        <label>Old Territory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GAS Alignment History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GAS HIST {0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GAS Alignment Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>